--- a/package.json
+++ b/package.json
@@ -14,8 +14,18 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "gatsby": "^3.2.1",
+    "gatsby-plugin-manifest": "^3.2.0",
+    "gatsby-plugin-mdx": "^2.2.0",
+    "gatsby-plugin-sharp": "^3.2.0",
+    "gatsby-remark-images": "^4.2.0",
+    "gatsby-remark-images-contentful": "^3.2.0",
+    "gatsby-source-contentful": "^5.2.0",
     "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-transformer-sharp": "^3.2.0",
+    "gatsby-transformer-sqip": "^3.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
