--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^3.2.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^3.2.0",
     "gatsby-plugin-mdx": "^2.2.0",
     "gatsby-plugin-sharp": "^3.2.0",
+    "gatsby-plugin-styled-components": "^4.2.0",
     "gatsby-remark-images": "^4.2.0",
     "gatsby-remark-images-contentful": "^3.2.0",
     "gatsby-source-contentful": "^5.2.0",
@@ -28,7 +30,8 @@
     "gatsby-transformer-sharp": "^3.2.0",
     "gatsby-transformer-sqip": "^3.2.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
     "prettier": "2.2.1"
